WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71471
[Qt] Bounce back limits are wrong in some situations
https://bugs.webkit.org/show_bug.cgi?id=71471
Summary
[Qt] Bounce back limits are wrong in some situations
Kenneth Rohde Christiansen
Reported
2011-11-03 07:07:18 PDT
SSIA
Attachments
Patch
(2.35 KB, patch)
2011-11-03 07:08 PDT
,
Kenneth Rohde Christiansen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Rohde Christiansen
Comment 1
2011-11-03 07:08:56 PDT
Created
attachment 113483
[details]
Patch
Simon Hausmann
Comment 2
2011-11-03 07:27:14 PDT
Comment on
attachment 113483
[details]
Patch rs=me
WebKit Review Bot
Comment 3
2011-11-03 08:40:39 PDT
Comment on
attachment 113483
[details]
Patch Clearing flags on attachment: 113483 Committed
r99197
: <
http://trac.webkit.org/changeset/99197
>
WebKit Review Bot
Comment 4
2011-11-03 08:40:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug