[Qt] Bounce back limits are wrong in some situations https://bugs.webkit.org/show_bug.cgi?id=71471

Reviewed by Simon Hausmann.

The valid position points were in viewport coordinates, but we were
requiring valid position points in content coordinates.

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::QtViewportInteractionEngine::animateContentIntoBoundariesIfNeeded):


Canonical link: https://commits.webkit.org/87788@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99197 268f45cc-cd09-0410-ab3c-d52691b4dbfc